crates/rimz-sidebar/src/render/snapshots/rimz_sidebar__render__tests__scroll_offset_follows_selection_to_bottom.snap
---
source: crates/rimz-sidebar/src/render/tests.rs
assertion_line: 83
expression: screen
---
 ⌘ query-engine

 ◎ 0
 ¤ 6
 ────────────────────────────────────
 ? 0   ! 0   ○ 0   ⏸︎ 0     ⢿ 6   ✓ 0
▏⣾ codex · 258k
▏  task-3
▏  ▢ ──────────────────────────    0%
▏
▏⣾ codex · 258k
▏  task-4
▏  ▢ ──────────────────────────    0%
▏
▌⣾ codex · 258k
▌  task-5
▌  ▢ ──────────────────────────    0%
              ? for help
