crates/rimz-sidebar/src/render/snapshots/rimz_sidebar__render__tests__scroll_overflow_shows_bar.snap
---
source: crates/rimz-sidebar/src/render/tests.rs
assertion_line: 83
expression: screen
---
 ⌘ query-engine

 ◎ 0
 ¤ 6
 ────────────────────────────────────
 ? 0   ! 0   ○ 0   ⏸︎ 0     ⢿ 6   ✓ 0
                                     ▐
▏⑂ alpha ┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄▐
▌⣾ codex                             ▐
▌  task-0                            ▐
▌  ▢ ──────────────────────────    0%▕
▏                                    ▕
▏⣾ codex                             ▕
▏  task-1                            ▕
▏  ▢ ──────────────────────────    0%▕
▏                                    ▕
▏⣾ codex                             ▕
              ? for help
