crates/rimz-sidebar/src/render/snapshots/rimz_sidebar__render__tests__scrollbar_hides_after_settle.snap
---
source: crates/rimz-sidebar/src/render/tests.rs
assertion_line: 83
expression: screen
---
 ⌘ query-engine

 ◎ 0
 ¤ 6
 ────────────────────────────────────
 ? 0   ! 0   ○ 0   ⏸︎ 0     ⢿ 6   ✓ 0

▏⑂ alpha ┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄
▌⢿ codex · 258k
▌  task-0
▌  ▢ ──────────────────────────    0%
▏
▏⢿ codex · 258k
▏  task-1
▏  ▢ ──────────────────────────    0%
▏
▏⢿ codex · 258k
              ? for help
