crates/rimz-sidebar/src/render/snapshots/rimz_sidebar__render__tests__scrollbar_never_mode.snap
---
source: crates/rimz-sidebar/src/render/tests.rs
assertion_line: 83
expression: screen
---
 ⌘ query-engine

 ◎ 0
 ¤ 6
 ────────────────────────────────────
 ? 0   ! 0   ○ 0   ⏸︎ 0     ⢿ 6   ✓ 0
▏⣾ codex · 258k
▏  task-1
▏  ▢ ──────────────────────────    0%
▏
▏⣾ codex · 258k
▏  task-2
▏  ▢ ──────────────────────────    0%

 ⑂ beta
 ⣾ codex · 258k
   task-3
              ? for help
