crates/rimz-sidebar/src/render/snapshots/rimz_sidebar__render__tests__subagent_two_line_entry.snap
---
source: crates/rimz-sidebar/src/render/mod.rs
assertion_line: 767
expression: screen
---
 ⌘ query-engine

 ¤ 1
 ◎ 0
 ────────────────────────────────────────────────────
 ? 0   ! 0   ○ 0   ⏸︎ 0                     ⢿ 1   ✓ 0

▏⑂ main ┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄
▌⣾ claude · Opus 4.8 · high · 200k              $1.27
▌  ledger refactor
▌  ▣ ━━━━━━━━━━━━━━━━────────────────────────── 38.2%
▌  ◇ 4k ↘ 1k ↗ 2k ◍ 6k ◌ 68k
▌  ⧉ subagents (1)
▌    ✓ Explore — locate the render seam
▌      ◇ 12.4k                                   ◷ <t>


                      ? for help
