crates/rimz-sidebar/src/render/snapshots/rimz_sidebar__render__tests__value_corner.snap
---
source: crates/rimz-sidebar/src/render/mod.rs
expression: screen
---
 ⌘ query-engine
 ✦ 1                                           $40.23
 ────────────────────────────────────────────────────
 ? 0   ! 0   ○ 0                      ✽ 0   ⢿ 1   ✓ 0
 ◷ <t> · ◇ 76.5k

▏⑂ main ┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄
▌⣾ claude · Opus 4.8 (1M) · high · auto         $1.27
▌  ledger refactor
▌  ▣ ━━━━━━━━━━━━━━━━────────────────────────── 38.2%
▌  ◇ 76.5k ↘ 64.2k ↗ 12.3k ◌ 68.0k
▌  ◷ <t> worked · +214 -31                         <t>












 ────────────────────────────────────────────────────
 Claude v2.1.158 · Claude Max                    ⇅ rc
  ▐▛███▜▌  $3.50 · ◇ 486.0k
 ▝▜█████▛▘ <t>  ▰▰▰▰▰▰▰▰▰▰▰▰▰▰▰▰▰▰▰▰▰▰▱▱▱▱▱▱▱  ↻ <reset>
   ▘▘ ▝▝   <t>  ▰▰▰▰▰▰▰▰▰▰▰▰▰▰▰▰▰▱▱▱▱▱▱▱▱▱▱▱▱  ↻ <reset>

                         month: 33.0M tok · $1,240.57
                          year: 47.2M tok · $4,821.90

                      ? for help
