crates/rimz-sidebar/src/render/snapshots/rimz_sidebar__render__tests__worktree_attention_map.snap
---
source: crates/rimz-sidebar/src/render/mod.rs
expression: screen
---
 ⌘ query-engine
 ✦ 3
 ────────────────────────────────────
 ? 2   ! 0   ○ 0      ✽ 0   ⢿ 1   ✓ 0

▏⑂ main ┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄
▌? claude
▌  permission
▌  ▣ ──────────────────────────    0%
▏
▏⣾ codex · GPT-5.5
▏  add tests
▏  ▣ ──────────────────────────    0%

 ┄ external ┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄ ? 1
 ? deploy.sh
   Deploy staging?
        ␣ next ?!   ? for help
